fixed extra whitespace around navbar

--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -1,5 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Share+Tech&display=swap');
 
+html {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+    font-size: 20px;
+}
+
+body {
+    margin: 0;
+}
+
 nav {
     background-color: #1a0b2b;
     float:right;
